--- a/app/templates/surveys/layout.html
+++ b/app/templates/surveys/layout.html
@@ -3,7 +3,7 @@
 
     {% block header %}
     <div class="container">
-        <h1>It works</h1>
+        <h1>{% block header_text %}Party Hard{% endblock %}</h1>
     </div>
     {% endblock %}
 
