--- a/app/templates/surveys/survey_form.html
+++ b/app/templates/surveys/survey_form.html
@@ -5,4 +5,5 @@
     {{ form }}
     <input type="submit" />
 </form>
+<a href="{% url 'social:begin' 'vk-oauth2' %}">Login with GitHub</a><br>
 {% endblock %}
