Survey form processing

--- a/app/templates/surveys/survey_form.html
+++ b/app/templates/surveys/survey_form.html
@@ -1,6 +1,6 @@
 {% extends "surveys/layout.html" %}
 {% block content %}
-<form method="post">
+<form method="post" novalidate>
     {% csrf_token %}
     {{ form }}
     <input type="submit" />
