--- a/app/templates/surveys/layout.html
+++ b/app/templates/surveys/layout.html
@@ -1,12 +1,20 @@
 {% extends "layout.html" %}
+{% load staticfiles %}
+{% block head_assets %}
+    <link rel="stylesheet" type="text/css" href="{% static "css/layout.css" %}" />
+{% endblock %}
 {% block body %}
 
-    {% block header %}
-    <div class="container">
-        <h1>{% block header_text %}Party Hard{% endblock %}</h1>
-    </div>
+    {% block navbar %}
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <a class="navbar-brand" href="#">{% block navbar_brand %}Party Hard{% endblock %}</a>
+    </nav>
     {% endblock %}
 
-    {% block content %}{% endblock %}
-
+    <div class="wrapper">
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>            
+    </div>
+    
 {% endblock %}
