--- a/app/templates/surveys/survey_detail.html
+++ b/app/templates/surveys/survey_detail.html
@@ -12,7 +12,7 @@
         {% endif %}
     </p>
     <p class="lead">
-        <a class="btn btn-danger btn-lg" href="#" role="button">Delete</a>
+        <a class="btn btn-danger btn-lg" href="{% url "surveys:delete" object.id %}" role="button">Delete</a>
         <a class="btn btn-info btn-lg" href="#" role="button">Leave it</a>
     </p>
 </div>
